# kalgan-i18n

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  messages.rs
tests/en/: messages.yaml
