[package]
name = "kalgan_i18n"
version = "0.9.0"
edition = "2018"
description = "A translation tool that retrieves the messages stored in yaml files used by Kalgan Framework."
homepage = "https://kalgan.eduardocasas.com"
repository = "https://github.com/eduardocasas/kalgan-i18n"
license = "MIT OR Apache-2.0"
keywords = ["translation", "i18n", "messages", "languages"]
categories = ["localization", "parsing"]

[dependencies]
log = "0.4.14"
serde = "1.0.130"
serde_yaml = "0.8.21"
